--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,15 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation group: 'org.testng', name: 'testng', version: '7.7.1'
+
+
 }
 
 test {
-    useJUnitPlatform()
+//    useJUnitPlatform()
+    useTestNG(){
+        suites ('./src/test/resources/testng.xml')
+    }
 }
